--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body class="w-full h-full overflow-auto font-sans text-base text-gray-600">
+  <body
+    class="light w-full h-full font-sans text-sm text-gray-600 overflow-auto"
+  >
     <app-root></app-root>
   </body>
 </html>
