--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body
-    class="light w-full h-full font-sans text-sm text-gray-600 overflow-auto"
+    class="light w-full h-full font-sans text-sm text-default overflow-auto"
   >
     <app-root></app-root>
   </body>
