update something new

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body
-    class="light w-full h-full font-sans text-sm text-default overflow-auto"
-  >
+  <body class="light w-full h-full text-base leading-normal font-sans text-default overflow-auto">
     <app-root></app-root>
   </body>
 </html>
