update something new

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="w-full h-full">
+<html lang="en" class="w-full h-full overflow-auto">
   <head>
     <meta charset="utf-8" />
     <title>Vietspeak</title>
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body class="light w-full h-full text-base leading-normal font-sans text-default overflow-auto">
+  <body
+    class="light w-full h-full text-base leading-normal font-sans text-default"
+  >
     <app-root></app-root>
   </body>
 </html>
