--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="w-full h-full overflow-auto">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Vietspeak</title>
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body
-    class="light w-full h-full text-base leading-normal font-sans text-default"
+    class="light"
   >
     <app-root></app-root>
   </body>
