--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,18 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <!-- Splash screen styles -->
+    <link href="assets/styles/splash-screen.css" rel="stylesheet" />
   </head>
-  <body
-    class="light"
-  >
+  <body class="light">
+    <!-- Splash screen -->
+    <splash-screen>
+      <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
+    </splash-screen>
     <app-root></app-root>
   </body>
 </html>
