--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <!-- Splash screen styles -->
     <link href="assets/styles/splash-screen.css" rel="stylesheet" />
   </head>
-  <body class="light">
+  <body class="theme-default light">
     <!-- Splash screen -->
     <splash-screen>
       <div class="spinner">
@@ -18,6 +18,7 @@
         <div class="bounce3"></div>
       </div>
     </splash-screen>
+    <!-- App root -->
     <app-root></app-root>
   </body>
 </html>
